# qrennd

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml  pyproject.toml.backup  requirements.txt  tox.ini
configs/: base_config.yaml  config.yaml
figures/model/: plot.py  sample_plot.py
notebooks/: MWPM_analysis.py  decoder.ipynb  decoder.py  download_exp_runs.sh  download_result.sh  legacy_decoder.ipynb  mwpm_decoder.ipynb  plotting_analysis.py  qrennd_decoder.ipynb  qrennd_train.py  surf_code_decoder.ipynb  training_analysis.py  training_analysis_google.py  training_analysis_prob_defects.py
notebooks/20230214-d3_rot-surf_circ-level_p0.001/: train_analysis.py
notebooks/20230302-d3_rot-surf_simulated_google_20M/: decode_analysis.py  plot_log_performance.py
notebooks/20230302-d5_rot-surf_simulated_google_20M/: decode_analysis.py  plot_log_performance.py
notebooks/20230403-d3_rot-css-surface_circ-level_p0.001/: decode.py  merge_results.py  plot_log_performance.py
notebooks/configs/: base_config.yaml
notebooks/data/20230306-d3_rot-surf_biased-noise/: training_analysis_biased_noise.py
notebooks/layouts/: d3_layout.yaml  d3_rotated_layout.yaml
notebooks/plot_templates/: google_decoders.yaml  nn_vs_pymatching.yaml  nn_vs_pymatching_assign.yaml
notebooks/state_classifier/: classification.py
qrennd/: __init__.py
qrennd/benchmarking/: __init__.py  benchmarks.py
qrennd/callbacks/: __init__.py  profilers.py  util.py
qrennd/configs/: config.py
qrennd/datasets/: __init__.py  generator.py  generators.py  preprocess.py  preprocessing.py  sequences.py  util.py
qrennd/layouts/: __init__.py  layout.py  library.py  plotter.py  util.py
qrennd/models/: __init__.py  base_model.py  decoder_model.py  model.py  models.py  networks.py
qrennd/utils/: __init__.py  analysis.py  config.py  dataset_generator.py  syndrome.py
scripts/: eval_mwpm.py  eval_qrennd.py  run_training.sh  train_qrennd.py  transfer_results.sh
scripts/configs/: base_config.yaml  base_config_ConvLSTM.yaml  base_config_google.yaml  base_config_google_d3.yaml  base_config_google_d5.yaml  base_config_prob_defects.yaml  config.yaml  conv_lstm_config.yaml  gru_config.yaml  lstm_config.yaml  lstm_decoder_config.yaml  pred_model_config.yaml
scripts/layouts/: d3_rotated_layout.yaml  d5_rotated_layout.yaml
tests/: test_qrennd.py
