[tool.poetry]
name = "qrennd"
version = "0.1.0"
description = "The Quantum REcurrent Neural Network Decoder (QRENND)."
authors = ["Boris Varbanov <b.m.varbanov@gmail.com>"]
maintainers = ["Boris Varbanov <b.m.varbanov@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/BorisVarbanov/qrennd"
repository = "https://github.com/BorisVarbanov/qrennd"
keywords = ["quantum", "error correction", "neural network"]

[tool.poetry.dependencies]
python = "3.8.12"
numpy = "1.19.5"
xarray = "0.21.1"
pyyaml = "^6.0"
netcdf4 = "^1.6.2"
networkx = "^3.0"
matplotlib = "^3.6.3"
jupyter = {version = "^1.0.0", optional = true}
ipykernel = {version = "^6.20.2", optional = true}
jupytext = {version = "^1.14.4", optional = true}
tensorflow = {version = "2.4.1", optional = true}
scipy = "1.9.2"
lmfit = "^1.1.0"

[tool.poetry.extras]
notebook = ["jupyter", "ipykernel", "jupytext"]
tensorflow = ["tensorflow"]

[tool.poetry.group.dev.dependencies]
mypy = "^0.921"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^23.1.20"
flake8-import-order = "^0.18.2"
flake8-annotations = "^3.0.0"
flake8-docstrings = "^1.7.0"
darglint = "^1.8.1"
xdoctest = "^1.1.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
typeguard = "^2.13.3"
isort = "^5.11.4"
sphinx = "^6.1.3"
sphinx-autodoc-typehints = "^1.21.8"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
